2009-02-28 Raphael Neider <rneider AT web.de>

	* src/regression/compare10.c,
	  src/regression/compare7.c,
	  src/regression/compare8.c,
	  src/regression/compare9.c: reset watchdog timer in time
	* src/pic/glue.c (pic14createInterruptVect): pin RESET vector
	  handler to 0x0000 as the linker no longer knows STARTUP sections
	* src/pic/pcode.c (register_reassign, ReuseReg): applied modified
	  patch #2512926 to (mostly) fix #1762626, cosmetic changes
	* src/pic/pcodepeep.c: remove reference to nonexisting function

2009-02-28 Raphael Neider <rneider AT web.de>

	* device/include/pic16/signal.h: avoid multiline inline
	  assembler statements in macros, addresses #2644965

2009-02-27 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f[24][3456]k20.h,
	  device/include/pic16/pic18f[68][567]j50.h,
	  device/include/pic16/pic18f[68]6j55.h,
	  device/lib/pic16/libdev/pic18f[24][3456]k20.c,
	  device/lib/pic16/libdev/pic18f[68][567]j50.c,
	  device/lib/pic16/libdev/pic18f[68]6j55.c,
	  device/include/pic16/pic18fregs.h,
	  device/include/pic16/pic16devices.txt,
	  device/lib/pic16/pics.all,
	  device/lib/pic16/libdev/Makefile.am,
	  device/lib/pic16/libio/Makefile.am: added/re-enabled many device
	  families (87j50 family contributed by Robert Wuest)

	* device/include/pic16/adc.h,
	  device/lib/pic16/libio/adc/adcbusy.c,
	  device/lib/pic16/libio/adc/adcclose.c,
	  device/lib/pic16/libio/adc/adcconv.c,
	  device/lib/pic16/libio/adc/adcopen.c,
	  device/lib/pic16/libio/adc/adcsetch.c: added 65j50-style ADC

	* doc/sdccman.lyx: updated list of supported devices, fixed typo
	* device/lib/pic16/Makefile.common: do not suppress assembler warnings

	* device/lib/pic16/Makefile.in,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/startup/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/libdev/Makefile.in,